# Arcademia-Raylib-Template

./: .clang-format  CMakeLists.txt  README.md
include/: console.hpp  game_renderer.hpp  game_resources.hpp  inspector.hpp  keybinds.hpp  scene.hpp  scene_manager.hpp
include/engine/input/: action_map.hpp  controller_connect_scene.hpp  input_manager.hpp
src/: main.cpp  scene_manager.cpp
src/engine/: console.cpp  game_renderer.cpp  game_resources.cpp  inspector.cpp
src/engine/input/: action_debug_scene.cpp  action_map.cpp  controller_connect_scene.cpp  input_debug_scene.cpp  input_mananger.cpp
src/scenes/: main_menu.cpp  play_scene.cpp
